# ec_predict_flow

./: README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  celery_worker.py  clear_redis.py  pyproject.toml  requirements.txt  run.py
backend/app/: main.py
backend/app/api/endpoints/: workflow.py
backend/app/core/: celery_app.py  config.py
backend/app/schemas/: workflow.py
backend/app/services/: alpha_ch.py  alphas101.py  alphas191.py  calculate_indicator.py  data_file_service.py  data_processor.py  label_processor.py
backend/app/tasks/: __init__.py  backtest_construction.py  backtest_execution.py  data_download.py  feature_calculation.py  label_calculation.py  model_analysis.py  model_interpretation.py  model_training.py  第二种打标签方法的说明.md
backend/app/v2/: __init__.py  main.py
backend/app/v2/api/: __init__.py  dependencies.py  router.py  schemas.py
backend/app/v2/api/routes/: __init__.py  artifacts.py  health.py  pipeline_templates.py  pipelines.py  runs.py
backend/app/v2/core/: __init__.py  config.py
backend/app/v2/domain/: __init__.py  indicators.py  labels.py  types.py
backend/app/v2/domain/features/: __init__.py  alpha_ch.py  alphas191.py  data_processor.py
backend/app/v2/infra/: __init__.py
backend/app/v2/infra/db/: __init__.py  base.py  engine.py  models.py  repositories.py
backend/app/v2/infra/queue/: __init__.py  celery_client.py  celery_queue.py  task_queue.py
backend/app/v2/usecases/: __init__.py  pipeline.py  runs.py
backend/app/v2/worker/: __init__.py  celery_app.py  pipeline.py  utils.py
(+80 files in other folders)
