[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ec_predict_flow"
version = "2.0.0"
description = "EC Predict Flow - A quantitative trading prediction system"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "celery>=5.3.4",
    "redis>=5.0.1",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg[binary]>=3.1.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
    "pandas>=2.1.3",
    "pyarrow>=14.0.0",
    "numpy>=1.26.2",
    "scipy>=1.11.4",
    "lightgbm>=4.1.0",
    "shap>=0.43.0",
    "matplotlib>=3.8.2",
    "scikit-learn>=1.3.2",
    "anthropic>=0.7.8",
    "python-dotenv>=1.0.0",
    "binance-futures-connector>=3.3.1",
    "tqdm>=4.66.1",
    "ta-lib>=0.4.28",
    "numba>=0.58.1",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
